# libcluon

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSVVisitor_8cpp.html  CSVVisitor_8hpp.html  CSVVisitor_8hpp_source.html  Dockerfile  EnvelopeConverter_8cpp.html  EnvelopeConverter_8hpp.html  EnvelopeConverter_8hpp_source.html  EnvelopeToJSON_8cpp.html  EnvelopeToJSON_8hpp.html  EnvelopeToJSON_8hpp_source.html  Envelope_8hpp.html  Envelope_8hpp.js  Envelope_8hpp_source.html  FromJSONVisitor_8cpp.html  FromJSONVisitor_8hpp.html  FromJSONVisitor_8hpp_source.html  FromLCMVisitor_8cpp.html  FromLCMVisitor_8hpp.html  FromLCMVisitor_8hpp_source.html  FromMsgPackVisitor_8cpp.html  FromMsgPackVisitor_8hpp.html  FromMsgPackVisitor_8hpp_source.html  FromProtoVisitor_8cpp.html  FromProtoVisitor_8hpp.html  FromProtoVisitor_8hpp_source.html  GenericMessage_8cpp.html  GenericMessage_8hpp.html  GenericMessage_8hpp_source.html  IPv4Tools_8cpp.html  IPv4Tools_8cpp.js  IPv4Tools_8hpp.html  IPv4Tools_8hpp.js  IPv4Tools_8hpp_source.html  JSONConstants_8hpp.html  (+315 more)
.github/workflows/: build-docker-image.yml
buildtools/: doxygen.cfg
buildtools/cmake/: CompileFlags.cmake  CompileFlags_clang3.8.cmake  CompileFlags_clang4.0.cmake  CompileFlags_clang5.0.cmake  CompileFlags_clang7.0.cmake  CompileFlags_gcc6.cmake  CompileFlags_gcc7.cmake  CompileFlags_gcc8.2.cmake  CompileFlags_gcc9.2.cmake  CppCheck.cmake  FindLibRT.cmake  Flint++.cmake  IncludeWhatYouUse.cmake  McCabe.cmake  ReformatCode.cmake  xUnitCatch.cmake
docs/: cluon-UDPReceiver.md  cluon-UDPSender.md
headeronly/: cluon-complete-v0.0.100.hpp  cluon-complete-v0.0.101.hpp  cluon-complete-v0.0.102.hpp  cluon-complete-v0.0.103.hpp  cluon-complete-v0.0.104.hpp  cluon-complete-v0.0.105.hpp  cluon-complete-v0.0.106.hpp  cluon-complete-v0.0.107.hpp  cluon-complete-v0.0.108.hpp  cluon-complete-v0.0.109.hpp  cluon-complete-v0.0.110.hpp  cluon-complete-v0.0.111.hpp  cluon-complete-v0.0.112.hpp  cluon-complete-v0.0.113.hpp  cluon-complete-v0.0.114.hpp  cluon-complete-v0.0.115.hpp  cluon-complete-v0.0.116.hpp  cluon-complete-v0.0.117.hpp  cluon-complete-v0.0.118.hpp  cluon-complete-v0.0.119.hpp  cluon-complete-v0.0.120.hpp  cluon-complete-v0.0.121.hpp  cluon-complete-v0.0.122.hpp  cluon-complete-v0.0.123.hpp  cluon-complete-v0.0.124.hpp  cluon-complete-v0.0.125.hpp  cluon-complete-v0.0.126.hpp  cluon-complete-v0.0.127.hpp  cluon-complete-v0.0.128.hpp  cluon-complete-v0.0.129.hpp  cluon-complete-v0.0.130.hpp  cluon-complete-v0.0.131.hpp  cluon-complete-v0.0.132.hpp  cluon-complete-v0.0.133.hpp  cluon-complete-v0.0.134.hpp  cluon-complete-v0.0.136.hpp  cluon-complete-v0.0.138.hpp  cluon-complete-v0.0.139.hpp  cluon-complete-v0.0.140.hpp  cluon-complete-v0.0.141.hpp  (+64 more)
libcluon/: CMakeLists.txt
libcluon/examples/: cluon-TCPConnection.cpp  cluon-TCPServer.cpp  cluon-UDPReceiver.cpp  cluon-UDPSender.cpp
libcluon/include/cluon/: CSVVisitor.hpp  Envelope.hpp  EnvelopeConverter.hpp  EnvelopeToJSON.hpp  FromJSONVisitor.hpp  FromLCMVisitor.hpp  FromMsgPackVisitor.hpp  FromProtoVisitor.hpp  GenericMessage.hpp  IPv4Tools.hpp  JSONConstants.hpp  JSONVisitor.hpp  LCMToGenericMessage.hpp  MessageFromLCMDecoder.hpp  MessageFromProtoDecoder.hpp  MessageParser.hpp  MessageToLCMEncoder.hpp  MessageToProtoEncoder.hpp  MetaMessage.hpp  MetaMessageToCPPTransformator.hpp  MetaMessageToProtoTransformator.hpp  MsgPackConstants.hpp  NotifyingPipeline.hpp  OD4Session.hpp  ODVDVisitor.hpp  Player.hpp  PortableEndian.hpp  ProtoConstants.hpp  SharedMemory.hpp  TCPConnection.hpp  TCPServer.hpp  TerminateHandler.hpp  Time.hpp  ToCSVVisitor.hpp  ToJSONVisitor.hpp  ToLCMVisitor.hpp  ToMsgPackVisitor.hpp  ToODVDVisitor.hpp  ToProtoVisitor.hpp  UDPPacketSizeConstraints.hpp  (+3 more)
libcluon/resources/: cluonDataStructures.odvd  cluonTestDataStructures.odvd  libcluonConfig.cmake
libcluon/src/: CSVVisitor.cpp  EnvelopeConverter.cpp  EnvelopeToJSON.cpp  FromJSONVisitor.cpp  FromLCMVisitor.cpp  FromMsgPackVisitor.cpp  FromProtoVisitor.cpp  GenericMessage.cpp  IPv4Tools.cpp  JSONVisitor.cpp  LCMToGenericMessage.cpp  MessageFromLCMDecoder.cpp  MessageFromProtoDecoder.cpp  MessageParser.cpp  MessageToLCMEncoder.cpp  MessageToProtoEncoder.cpp  MetaMessage.cpp  MetaMessageToCPPTransformator.cpp  MetaMessageToProtoTransformator.cpp  OD4Session.cpp  ODVDVisitor.cpp  Player.cpp  SharedMemory.cpp  TCPConnection.cpp  TCPServer.cpp  TerminateHandler.cpp  ToCSVVisitor.cpp  ToJSONVisitor.cpp  ToLCMVisitor.cpp  ToMsgPackVisitor.cpp  ToODVDVisitor.cpp  ToProtoVisitor.cpp  UDPReceiver.cpp  UDPSender.cpp  cluon.cpp
libcluon/testsuites/: TestBase64.cpp  TestCPP.cpp  TestCSVVisitor.cpp  TestEnvelopeConverter.cpp  TestEnvelopeToJSON.cpp  TestIPv4Tools.cpp  TestJSONVisitor.cpp  TestMessageParser.cpp  TestMetaMessage.cpp  TestMetaMessageToCPPTransformator.cpp  TestMetaMessageToProtoTransformator.cpp  TestMyTestMessage1.cpp  TestMyTestMessagesToJSON.cpp  TestMyTestMessagesToLCM.cpp  TestMyTestMessagesToMsgPack.cpp  TestMyTestMessagesToMsgPackManyFields.cpp  TestMyTestMessagesToProto.cpp  TestMyTestMessagesToProtoDirectInjection.cpp  TestNotifyingPipeline.cpp  TestOD4Session.cpp  TestODVDVisitor.cpp  TestPlayer.cpp  TestProtoConstants.cpp  TestSharedMemory.cpp  TestTCPServer.cpp  TestTime.cpp  TestToCSVVisitor.cpp  TestToJSONVisitor.cpp  TestToODVDVisitor.cpp  TestUDPPacketSizeConstraints.cpp  TestUDPReceiver.cpp  TestUDPSender.cpp  Testcluon.cpp  TestcluonDataStructures.cpp  Testcluon_LCMtoJSON.cpp  Testcluon_OD4toJSON.cpp  Testcluon_OD4toStdout.cpp  Testcluon_livefeed.cpp  Testcluon_msc.cpp  Testcluon_rec2csv.cpp  (+1 more)
libcluon/tools/: cluon-LCMtoJSON.cpp  cluon-LCMtoJSON.hpp  cluon-OD4toJSON.cpp  cluon-OD4toJSON.hpp  cluon-OD4toStdout.cpp  cluon-OD4toStdout.hpp  cluon-filter.cpp  cluon-filter.hpp  cluon-livefeed.cpp  cluon-livefeed.hpp  cluon-msc.cpp  cluon-msc.hpp  cluon-rec2csv.cpp  cluon-rec2csv.hpp  cluon-replay.cpp  cluon-replay.hpp  libcluon.cpp
python/: Makefile  MyExampleMessageSpec.odvd  OD4Session.py  receiveEnvelopes.py  sendEnvelopes.py
(+304 files in other folders)
